# xpla-anchor

./: .gitignore  LICENSE  Makefile  README.md  anchor.go  config.yaml  go.mod  go.sum  init.sh
app/: app.go  appfile.go
cmd/: account.go  config.go  contract.go  execute.go  flags.go  gw.go  init.go  key.go  query.go  root.go
contract/: Cargo.toml  LICENSE  Makefile.toml  NOTICE  README.md
contract/contracts/anchor/: Cargo.toml
contract/contracts/anchor/examples/: schema.rs
contract/contracts/anchor/src/: error.rs  execute.rs  handler.rs  msg.rs  query.rs  state.rs
gw/: aggregate.go  anchoring.go  blocklist.go  gateway.go  sequence.go
gw/db/: dbinit.go
gw/db/sql/: db_create.sql  errlog_table_create.sql  infolog_table_create.sql
types/: block.go  channels.go  contract.go  errors.go  types.go
util/: convtype.go  log.go  util.go
