[workspace]
members = ["contracts/*", "packages/*"]

[workspace.package]
version       = "0.1.0"
edition       = "2021"
license       = "Apache-2.0"
repository    = "https://github.com/Moonyongjung/xpla-anchor/contract"
homepage      = "https://xpla.io"
documentation = "https://docs.xpla.io"

[workspace.dependencies]
cosmwasm-schema = "1.1.5"
cosmwasm-std    = "1.1.5"
cw2             = "0.16.0"
cw-storage-plus = "0.16.0"
schemars        = "0.8.10"
thiserror       = "1.0.31"

[profile.release.package.xpla-anchor-contract]
codegen-units = 1
incremental = false

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true


 